04-BISON-para-reconocimiento-de-estructuras-de-frase/bison.output
State 55 conflicts: 1 shift/reduce
State 79 conflicts: 1 shift/reduce
State 159 conflicts: 1 shift/reduce, 1 reduce/reduce
State 163 conflicts: 3 reduce/reduce
State 164 conflicts: 3 reduce/reduce


Grammar

    0 $accept: unidad_de_programa $end

    1 unidad_de_programa: INCLUDE unidad_de_programa
    2                   | DEFINE expresion_primaria unidad_de_programa
    3                   | unidad_de_traduccion

    4 unidad_de_traduccion: declaracion_externa
    5                     | unidad_de_traduccion declaracion_externa

    6 declaracion_externa: definicion_de_funcion
    7                    | declaracion

    8 definicion_de_funcion: especificadores_de_declaracion declarador lista_de_declaracion sentencia_compuesta
    9                      | declarador lista_de_declaracion sentencia_compuesta
   10                      | especificadores_de_declaracion declarador sentencia_compuesta
   11                      | declarador sentencia_compuesta

   12 declaracion: especificadores_de_declaracion lista_declaradores_init ';'
   13            | especificadores_de_declaracion ';'

   14 lista_de_declaracion: declaracion
   15                     | lista_de_declaracion declaracion

   16 especificadores_de_declaracion: especificador_categoria_almacenamiento especificadores_de_declaracion
   17                               | especificador_categoria_almacenamiento
   18                               | especificador_de_tipo especificadores_de_declaracion
   19                               | especificador_de_tipo
   20                               | calificador_de_tipo especificadores_de_declaracion
   21                               | calificador_de_tipo

   22 especificador_categoria_almacenamiento: AUTO
   23                                       | REGISTER
   24                                       | STATIC
   25                                       | EXTERN
   26                                       | TYPEDEF

   27 especificador_de_tipo: INT
   28                      | CHAR
   29                      | FLOAT
   30                      | DOUBLE
   31                      | SHORT
   32                      | VOID
   33                      | LONG
   34                      | SIGNED
   35                      | UNSIGNED
   36                      | especificador_estructura_o_union
   37                      | especificador_enum
   38                      | nombre_typedef

   39 calificador_de_tipo: CONST
   40                    | VOLATILE

   41 especificador_estructura_o_union: estructura_o_union IDENTIFICADOR '{' lista_declaraciones_struct '}'
   42                                 | estructura_o_union IDENTIFICADOR
   43                                 | '{' lista_declaraciones_struct '}'

   44 estructura_o_union: STRUCT
   45                   | UNION

   46 lista_declaraciones_struct: declaracion_struct
   47                           | lista_declaraciones_struct declaracion_struct

   48 lista_declaradores_init: declarador_init
   49                        | lista_declaradores_init ',' declarador_init

   50 declarador_init: declarador
   51                | declarador '=' inicializador

   52 declaracion_struct: lista_calificador_especificador lista_declaradores_struct ';'

   53 lista_calificador_especificador: especificador_de_tipo lista_calificador_especificador
   54                                | especificador_de_tipo
   55                                | calificador_de_tipo lista_calificador_especificador
   56                                | calificador_de_tipo

   57 lista_declaradores_struct: declarador_struct
   58                          | lista_declaradores_struct ',' declarador_struct

   59 declarador_struct: declarador
   60                  | declarador ':' expresion_constante
   61                  | ':' expresion_constante

   62 especificador_enum: ENUM IDENTIFICADOR '{' lista_de_enumerador '}'
   63                   | '{' lista_de_enumerador '}'
   64                   | ENUM IDENTIFICADOR

   65 lista_de_enumerador: enumerador
   66                    | lista_de_enumerador ',' enumerador

   67 enumerador: IDENTIFICADOR
   68           | IDENTIFICADOR '=' expresion_constante

   69 declarador: apuntador declarador_directo
   70           | declarador_directo

   71 declarador_directo: IDENTIFICADOR
   72                   | '(' declarador ')'
   73                   | IDENTIFICADOR '[' expresion_constante ']'
   74                   | IDENTIFICADOR '[' ']'
   75                   | IDENTIFICADOR '(' lista_tipos_de_parametro ')'
   76                   | IDENTIFICADOR '(' lista_de_identificadores ')'
   77                   | IDENTIFICADOR '(' ')'

   78 apuntador: '*' lista_calificadores_de_tipo
   79          | '*'
   80          | '*' lista_calificadores_de_tipo apuntador
   81          | '*' apuntador

   82 lista_calificadores_de_tipo: calificador_de_tipo
   83                            | lista_calificadores_de_tipo calificador_de_tipo

   84 lista_tipos_de_parametro: lista_de_parametros
   85                         | lista_de_parametros ',' ELIPSIS

   86 lista_de_parametros: declaracion_parametro
   87                    | lista_de_parametros ',' declaracion_parametro

   88 declaracion_parametro: especificadores_de_declaracion declarador
   89                      | especificadores_de_declaracion declarador_abstracto
   90                      | especificadores_de_declaracion

   91 lista_de_identificadores: IDENTIFICADOR
   92                         | lista_de_identificadores ',' IDENTIFICADOR

   93 inicializador: expresion_de_asignacion
   94              | '{' lista_de_inicializadores '}'
   95              | '{' lista_de_inicializadores ',' '}'

   96 lista_de_inicializadores: inicializador
   97                         | lista_de_inicializadores ',' inicializador

   98 nombre_de_tipo: lista_calificador_especificador declarador_abstracto
   99               | lista_calificador_especificador

  100 declarador_abstracto: apuntador
  101                     | apuntador declarador_abstracto_directo
  102                     | declarador_abstracto_directo

  103 declarador_abstracto_directo: '(' declarador_abstracto ')'
  104                             | declarador_abstracto_directo '[' expresion_constante ']'
  105                             | '[' ']'
  106                             | declarador_abstracto_directo '[' ']'
  107                             | '[' expresion_constante ']'
  108                             | declarador_abstracto_directo '(' lista_tipos_de_parametro ')'
  109                             | '(' ')'
  110                             | declarador_abstracto_directo '(' ')'
  111                             | '(' lista_tipos_de_parametro ')'

  112 nombre_typedef: 't'

  113 sentencia: sentencia_etiquetada
  114          | sentencia_expresion
  115          | sentencia_compuesta
  116          | sentencia_de_iteracion
  117          | sentencia_de_seleccion
  118          | sentencia_de_salto

  119 sentencia_etiquetada: IDENTIFICADOR ':' sentencia
  120                     | CASE expresion_constante ':' sentencia
  121                     | DEFAULT ':' sentencia

  122 sentencia_expresion: expresion ';'
  123                    | ';'

  124 sentencia_compuesta: '{' lista_de_declaracion lista_de_sentencias '}'
  125                    | '{' '}'
  126                    | '{' lista_de_declaracion '}'
  127                    | '{' lista_de_sentencias '}'

  128 lista_de_sentencias: sentencia
  129                    | lista_de_sentencias sentencia

  130 sentencia_de_seleccion: IF '(' expresion ')' sentencia
  131                       | IF '(' expresion ')' sentencia ELSE sentencia
  132                       | SWITCH '(' expresion ')' sentencia

  133 sentencia_de_iteracion: WHILE '(' expresion ')' sentencia
  134                       | DO sentencia WHILE '(' expresion ')' ';'
  135                       | FOR '(' expresion ';' expresion ';' expresion ')' sentencia
  136                       | FOR '(' expresion ';' expresion ';' ')' sentencia
  137                       | FOR '(' expresion ';' ';' expresion ')' sentencia
  138                       | FOR '(' expresion ';' ';' ')' sentencia
  139                       | FOR '(' ';' expresion ';' expresion ')' sentencia
  140                       | FOR '(' ';' expresion ';' ')' sentencia
  141                       | FOR '(' ';' ';' expresion ')' sentencia
  142                       | FOR '(' ';' ';' ')' sentencia

  143 sentencia_de_salto: GOTO IDENTIFICADOR ';'
  144                   | CONTINUE ';'
  145                   | BREAK ';'
  146                   | RETURN expresion ';'
  147                   | RETURN ';'

  148 expresion: expresion_de_asignacion
  149          | expresion ',' expresion_de_asignacion

  150 expresion_de_asignacion: expresion_condicional
  151                        | expresion_unaria operador_de_asignacion expresion_de_asignacion

  152 operador_de_asignacion: POR_IGUAL
  153                       | DIV_IGUAL
  154                       | MAS_IGUAL
  155                       | MENOS_IGUAL
  156                       | MOD_IGUAL
  157                       | CORR_IZQ_IGUAL
  158                       | CORR_DER_IGUAL
  159                       | Y_IGUAL
  160                       | POT_IGUAL
  161                       | O_IGUAL
  162                       | '='

  163 expresion_condicional: expresion_logica_OR
  164                      | expresion_logica_OR '?' expresion ':' expresion_condicional

  165 expresion_constante: expresion_condicional

  166 expresion_logica_OR: expresion_logica_AND
  167                    | expresion_logica_OR CTE_OR expresion_logica_AND

  168 expresion_logica_AND: expresion_OR_inclusivo
  169                     | expresion_logica_AND CTE_AND expresion_OR_inclusivo

  170 expresion_OR_inclusivo: expresion_OR_exclusivo
  171                       | expresion_OR_inclusivo '|' expresion_OR_exclusivo

  172 expresion_OR_exclusivo: expresion_AND
  173                       | expresion_OR_exclusivo '^' expresion_AND

  174 expresion_AND: expresion_de_igualdad
  175              | expresion_AND '&' expresion_de_igualdad

  176 expresion_de_igualdad: expresion_relacional
  177                      | expresion_de_igualdad IGUAL_IGUAL expresion_relacional
  178                      | expresion_de_igualdad DISTINTO expresion_relacional

  179 expresion_relacional: expresion_de_corrimiento
  180                     | expresion_relacional '<' expresion_de_corrimiento
  181                     | expresion_relacional '>' expresion_de_corrimiento
  182                     | expresion_relacional MENOR_IGUAL expresion_de_corrimiento
  183                     | expresion_relacional MAYOR_IGUAL expresion_de_corrimiento

  184 expresion_de_corrimiento: expresion_aditiva
  185                         | expresion_de_corrimiento CORR_IZQ expresion_aditiva
  186                         | expresion_de_corrimiento CORR_DER expresion_aditiva

  187 expresion_aditiva: expresion_multiplicativa
  188                  | expresion_aditiva '+' expresion_multiplicativa
  189                  | expresion_aditiva '-' expresion_multiplicativa

  190 expresion_multiplicativa: expresion_cast
  191                         | expresion_multiplicativa '*' expresion_cast
  192                         | expresion_multiplicativa '/' expresion_cast
  193                         | expresion_multiplicativa '%' expresion_cast

  194 expresion_cast: expresion_unaria
  195               | '(' nombre_de_tipo ')' expresion_cast

  196 expresion_unaria: expresion_posfija
  197                 | MENOS_MENOS expresion_unaria
  198                 | MAS_MAS expresion_unaria
  199                 | operador_unario expresion_cast
  200                 | SIZEOF expresion_unaria
  201                 | SIZEOF '(' nombre_de_tipo ')'

  202 operador_unario: '&'
  203                | '*'
  204                | '+'
  205                | '-'
  206                | '~'
  207                | '!'

  208 expresion_posfija: expresion_primaria
  209                  | expresion_posfija '[' expresion ']'
  210                  | expresion_posfija '(' lista_expresiones_argumento ')'
  211                  | expresion_posfija '(' ')'
  212                  | expresion_posfija '.' IDENTIFICADOR
  213                  | expresion_posfija FLECHA IDENTIFICADOR
  214                  | expresion_posfija MENOS_MENOS
  215                  | expresion_posfija MAS_MAS

  216 expresion_primaria: IDENTIFICADOR
  217                   | constante
  218                   | LITERAL_CADENA
  219                   | '(' expresion ')'

  220 lista_expresiones_argumento: expresion_de_asignacion
  221                            | lista_expresiones_argumento ',' expresion_de_asignacion

  222 constante: CONST_OCTAL
  223          | CONST_HEXADECIMAL
  224          | CONST_DECIMAL
  225          | CONST_CARACTER
  226          | CONST_PTOFLOTANTE
  227          | ENUM


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 207
    '%' (37) 193
    '&' (38) 175 202
    '(' (40) 72 75 76 77 103 108 109 110 111 130 131 132 133 134 135 136 137 138 139 140 141 142 195 201 210 211 219
    ')' (41) 72 75 76 77 103 108 109 110 111 130 131 132 133 134 135 136 137 138 139 140 141 142 195 201 210 211 219
    '*' (42) 78 79 80 81 191 203
    '+' (43) 188 204
    ',' (44) 49 58 66 85 87 92 95 97 149 221
    '-' (45) 189 205
    '.' (46) 212
    '/' (47) 192
    ':' (58) 60 61 119 120 121 164
    ';' (59) 12 13 52 122 123 134 135 136 137 138 139 140 141 142 143 144 145 146 147
    '<' (60) 180
    '=' (61) 51 68 162
    '>' (62) 181
    '?' (63) 164
    '[' (91) 73 74 104 105 106 107 209
    ']' (93) 73 74 104 105 106 107 209
    '^' (94) 173
    't' (116) 112
    '{' (123) 41 43 62 63 94 95 124 125 126 127
    '|' (124) 171
    '}' (125) 41 43 62 63 94 95 124 125 126 127
    '~' (126) 206
    error (256)
    INCLUDE (258) 1
    DEFINE (259) 2
    AUTO (260) 22
    REGISTER (261) 23
    STATIC (262) 24
    EXTERN (263) 25
    TYPEDEF (264) 26
    VOID (265) 32
    CHAR (266) 28
    SHORT (267) 31
    INT (268) 27
    LONG (269) 33
    FLOAT (270) 29
    DOUBLE (271) 30
    SIGNED (272) 34
    UNSIGNED (273) 35
    CONST (274) 39
    VOLATILE (275) 40
    ENUM (276) 62 64 227
    CASE (277) 120
    DEFAULT (278) 121
    IF (279) 130 131
    SWITCH (280) 132
    ELSE (281) 131
    FOR (282) 135 136 137 138 139 140 141 142
    DO (283) 134
    WHILE (284) 133 134
    GOTO (285) 143
    CONTINUE (286) 144
    BREAK (287) 145
    STRUCT (288) 44
    UNION (289) 45
    RETURN (290) 146 147
    SIZEOF (291) 200 201
    CTE_OR (292) 167
    CTE_AND (293) 169
    ELIPSIS (294) 85
    IGUAL_IGUAL (295) 177
    DISTINTO (296) 178
    MENOR_IGUAL (297) 182
    MAYOR_IGUAL (298) 183
    CORR_DER (299) 186
    CORR_IZQ (300) 185
    MAS_MAS (301) 198 215
    MENOS_MENOS (302) 197 214
    FLECHA (303) 213
    POR_IGUAL (304) 152
    DIV_IGUAL (305) 153
    MAS_IGUAL (306) 154
    MENOS_IGUAL (307) 155
    MOD_IGUAL (308) 156
    CORR_DER_IGUAL (309) 158
    CORR_IZQ_IGUAL (310) 157
    Y_IGUAL (311) 159
    POT_IGUAL (312) 160
    O_IGUAL (313) 161
    IDENTIFICADOR (314) 41 42 62 64 67 68 71 73 74 75 76 77 91 92 119 143 212 213 216
    LITERAL_CADENA (315) 218
    CONST_OCTAL (316) 222
    CONST_HEXADECIMAL (317) 223
    CONST_DECIMAL (318) 224
    CONST_PTOFLOTANTE (319) 226
    CONST_CARACTER (320) 225
    IFX (321)


Nonterminals, with rules where they appear

    $accept (92)
        on left: 0
    unidad_de_programa (93)
        on left: 1 2 3
        on right: 0 1 2
    unidad_de_traduccion (94)
        on left: 4 5
        on right: 3 5
    declaracion_externa (95)
        on left: 6 7
        on right: 4 5
    definicion_de_funcion (96)
        on left: 8 9 10 11
        on right: 6
    declaracion (97)
        on left: 12 13
        on right: 7 14 15
    lista_de_declaracion (98)
        on left: 14 15
        on right: 8 9 15 124 126
    especificadores_de_declaracion (99)
        on left: 16 17 18 19 20 21
        on right: 8 10 12 13 16 18 20 88 89 90
    especificador_categoria_almacenamiento (100)
        on left: 22 23 24 25 26
        on right: 16 17
    especificador_de_tipo (101)
        on left: 27 28 29 30 31 32 33 34 35 36 37 38
        on right: 18 19 53 54
    calificador_de_tipo (102)
        on left: 39 40
        on right: 20 21 55 56 82 83
    especificador_estructura_o_union (103)
        on left: 41 42 43
        on right: 36
    estructura_o_union (104)
        on left: 44 45
        on right: 41 42
    lista_declaraciones_struct (105)
        on left: 46 47
        on right: 41 43 47
    lista_declaradores_init (106)
        on left: 48 49
        on right: 12 49
    declarador_init (107)
        on left: 50 51
        on right: 48 49
    declaracion_struct (108)
        on left: 52
        on right: 46 47
    lista_calificador_especificador (109)
        on left: 53 54 55 56
        on right: 52 53 55 98 99
    lista_declaradores_struct (110)
        on left: 57 58
        on right: 52 58
    declarador_struct (111)
        on left: 59 60 61
        on right: 57 58
    especificador_enum (112)
        on left: 62 63 64
        on right: 37
    lista_de_enumerador (113)
        on left: 65 66
        on right: 62 63 66
    enumerador (114)
        on left: 67 68
        on right: 65 66
    declarador (115)
        on left: 69 70
        on right: 8 9 10 11 50 51 59 60 72 88
    declarador_directo (116)
        on left: 71 72 73 74 75 76 77
        on right: 69 70
    apuntador (117)
        on left: 78 79 80 81
        on right: 69 80 81 100 101
    lista_calificadores_de_tipo (118)
        on left: 82 83
        on right: 78 80 83
    lista_tipos_de_parametro (119)
        on left: 84 85
        on right: 75 108 111
    lista_de_parametros (120)
        on left: 86 87
        on right: 84 85 87
    declaracion_parametro (121)
        on left: 88 89 90
        on right: 86 87
    lista_de_identificadores (122)
        on left: 91 92
        on right: 76 92
    inicializador (123)
        on left: 93 94 95
        on right: 51 96 97
    lista_de_inicializadores (124)
        on left: 96 97
        on right: 94 95 97
    nombre_de_tipo (125)
        on left: 98 99
        on right: 195 201
    declarador_abstracto (126)
        on left: 100 101 102
        on right: 89 98 103
    declarador_abstracto_directo (127)
        on left: 103 104 105 106 107 108 109 110 111
        on right: 101 102 104 106 108 110
    nombre_typedef (128)
        on left: 112
        on right: 38
    sentencia (129)
        on left: 113 114 115 116 117 118
        on right: 119 120 121 128 129 130 131 132 133 134 135 136 137 138 139 140 141 142
    sentencia_etiquetada (130)
        on left: 119 120 121
        on right: 113
    sentencia_expresion (131)
        on left: 122 123
        on right: 114
    sentencia_compuesta (132)
        on left: 124 125 126 127
        on right: 8 9 10 11 115
    lista_de_sentencias (133)
        on left: 128 129
        on right: 124 127 129
    sentencia_de_seleccion (134)
        on left: 130 131 132
        on right: 117
    sentencia_de_iteracion (135)
        on left: 133 134 135 136 137 138 139 140 141 142
        on right: 116
    sentencia_de_salto (136)
        on left: 143 144 145 146 147
        on right: 118
    expresion (137)
        on left: 148 149
        on right: 122 130 131 132 133 134 135 136 137 138 139 140 141 146 149 164 209 219
    expresion_de_asignacion (138)
        on left: 150 151
        on right: 93 148 149 151 220 221
    operador_de_asignacion (139)
        on left: 152 153 154 155 156 157 158 159 160 161 162
        on right: 151
    expresion_condicional (140)
        on left: 163 164
        on right: 150 164 165
    expresion_constante (141)
        on left: 165
        on right: 60 61 68 73 104 107 120
    expresion_logica_OR (142)
        on left: 166 167
        on right: 163 164 167
    expresion_logica_AND (143)
        on left: 168 169
        on right: 166 167 169
    expresion_OR_inclusivo (144)
        on left: 170 171
        on right: 168 169 171
    expresion_OR_exclusivo (145)
        on left: 172 173
        on right: 170 171 173
    expresion_AND (146)
        on left: 174 175
        on right: 172 173 175
    expresion_de_igualdad (147)
        on left: 176 177 178
        on right: 174 175 177 178
    expresion_relacional (148)
        on left: 179 180 181 182 183
        on right: 176 177 178 180 181 182 183
    expresion_de_corrimiento (149)
        on left: 184 185 186
        on right: 179 180 181 182 183 185 186
    expresion_aditiva (150)
        on left: 187 188 189
        on right: 184 185 186 188 189
    expresion_multiplicativa (151)
        on left: 190 191 192 193
        on right: 187 188 189 191 192 193
    expresion_cast (152)
        on left: 194 195
        on right: 190 191 192 193 195 199
    expresion_unaria (153)
        on left: 196 197 198 199 200 201
        on right: 151 194 197 198 200
    operador_unario (154)
        on left: 202 203 204 205 206 207
        on right: 199
    expresion_posfija (155)
        on left: 208 209 210 211 212 213 214 215
        on right: 196 209 210 211 212 213 214 215
    expresion_primaria (156)
        on left: 216 217 218 219
        on right: 2 208
    lista_expresiones_argumento (157)
        on left: 220 221
        on right: 210 221
    constante (158)
        on left: 222 223 224 225 226 227
        on right: 217


State 0

    0 $accept: . unidad_de_programa $end

    INCLUDE        shift, and go to state 1
    DEFINE         shift, and go to state 2
    AUTO           shift, and go to state 3
    REGISTER       shift, and go to state 4
    STATIC         shift, and go to state 5
    EXTERN         shift, and go to state 6
    TYPEDEF        shift, and go to state 7
    VOID           shift, and go to state 8
    CHAR           shift, and go to state 9
    SHORT          shift, and go to state 10
    INT            shift, and go to state 11
    LONG           shift, and go to state 12
    FLOAT          shift, and go to state 13
    DOUBLE         shift, and go to state 14
    SIGNED         shift, and go to state 15
    UNSIGNED       shift, and go to state 16
    CONST          shift, and go to state 17
    VOLATILE       shift, and go to state 18
    ENUM           shift, and go to state 19
    STRUCT         shift, and go to state 20
    UNION          shift, and go to state 21
    IDENTIFICADOR  shift, and go to state 22
    '*'            shift, and go to state 23
    '('            shift, and go to state 24
    '{'            shift, and go to state 25
    't'            shift, and go to state 26

    unidad_de_programa                      go to state 27
    unidad_de_traduccion                    go to state 28
    declaracion_externa                     go to state 29
    definicion_de_funcion                   go to state 30
    declaracion                             go to state 31
    especificadores_de_declaracion          go to state 32
    especificador_categoria_almacenamiento  go to state 33
    especificador_de_tipo                   go to state 34
    calificador_de_tipo                     go to state 35
    especificador_estructura_o_union        go to state 36
    estructura_o_union                      go to state 37
    especificador_enum                      go to state 38
    declarador                              go to state 39
    declarador_directo                      go to state 40
    apuntador                               go to state 41
    nombre_typedef                          go to state 42


State 1

    1 unidad_de_programa: INCLUDE . unidad_de_programa

    INCLUDE        shift, and go to state 1
    DEFINE         shift, and go to state 2
    AUTO           shift, and go to state 3
    REGISTER       shift, and go to state 4
    STATIC         shift, and go to state 5
    EXTERN         shift, and go to state 6
    TYPEDEF        shift, and go to state 7
    VOID           shift, and go to state 8
    CHAR           shift, and go to state 9
    SHORT          shift, and go to state 10
    INT            shift, and go to state 11
    LONG           shift, and go to state 12
    FLOAT          shift, and go to state 13
    DOUBLE         shift, and go to state 14
    SIGNED         shift, and go to state 15
    UNSIGNED       shift, and go to state 16
    CONST          shift, and go to state 17
    VOLATILE       shift, and go to state 18
    ENUM           shift, and go to state 19
    STRUCT         shift, and go to state 20
    UNION          shift, and go to state 21
    IDENTIFICADOR  shift, and go to state 22
    '*'            shift, and go to state 23
    '('            shift, and go to state 24
    '{'            shift, and go to state 25
    't'            shift, and go to state 26

    unidad_de_programa                      go to state 43
    unidad_de_traduccion                    go to state 28
    declaracion_externa                     go to state 29
    definicion_de_funcion                   go to state 30
    declaracion                             go to state 31
    especificadores_de_declaracion          go to state 32
    especificador_categoria_almacenamiento  go to state 33
    especificador_de_tipo                   go to state 34
    calificador_de_tipo                     go to state 35
    especificador_estructura_o_union        go to state 36
    estructura_o_union                      go to state 37
    especificador_enum                      go to state 38
    declarador                              go to state 39
    declarador_directo                      go to state 40
    apuntador                               go to state 41
    nombre_typedef                          go to state 42


State 2

    2 unidad_de_programa: DEFINE . expresion_primaria unidad_de_programa

    ENUM               shift, and go to state 44
    IDENTIFICADOR      shift, and go to state 45
    LITERAL_CADENA     shift, and go to state 46
    CONST_OCTAL        shift, and go to state 47
    CONST_HEXADECIMAL  shift, and go to state 48
    CONST_DECIMAL      shift, and go to state 49
    CONST_PTOFLOTANTE  shift, and go to state 50
    CONST_CARACTER     shift, and go to state 51
    '('                shift, and go to state 52

    expresion_primaria  go to state 53
    constante           go to state 54


State 3

   22 especificador_categoria_almacenamiento: AUTO .

    $default  reduce using rule 22 (especificador_categoria_almacenamiento)


State 4

   23 especificador_categoria_almacenamiento: REGISTER .

    $default  reduce using rule 23 (especificador_categoria_almacenamiento)


State 5

   24 especificador_categoria_almacenamiento: STATIC .

    $default  reduce using rule 24 (especificador_categoria_almacenamiento)


State 6

   25 especificador_categoria_almacenamiento: EXTERN .

    $default  reduce using rule 25 (especificador_categoria_almacenamiento)


State 7

   26 especificador_categoria_almacenamiento: TYPEDEF .

    $default  reduce using rule 26 (especificador_categoria_almacenamiento)


State 8

   32 especificador_de_tipo: VOID .

    $default  reduce using rule 32 (especificador_de_tipo)


State 9

   28 especificador_de_tipo: CHAR .

    $default  reduce using rule 28 (especificador_de_tipo)


State 10

   31 especificador_de_tipo: SHORT .

    $default  reduce using rule 31 (especificador_de_tipo)


State 11

   27 especificador_de_tipo: INT .

    $default  reduce using rule 27 (especificador_de_tipo)


State 12

   33 especificador_de_tipo: LONG .

    $default  reduce using rule 33 (especificador_de_tipo)


State 13

   29 especificador_de_tipo: FLOAT .

    $default  reduce using rule 29 (especificador_de_tipo)


State 14

   30 especificador_de_tipo: DOUBLE .

    $default  reduce using rule 30 (especificador_de_tipo)


State 15

   34 especificador_de_tipo: SIGNED .

    $default  reduce using rule 34 (especificador_de_tipo)


State 16

   35 especificador_de_tipo: UNSIGNED .

    $default  reduce using rule 35 (especificador_de_tipo)


State 17

   39 calificador_de_tipo: CONST .

    $default  reduce using rule 39 (calificador_de_tipo)


State 18

   40 calificador_de_tipo: VOLATILE .

    $default  reduce using rule 40 (calificador_de_tipo)


State 19

   62 especificador_enum: ENUM . IDENTIFICADOR '{' lista_de_enumerador '}'
   64                   | ENUM . IDENTIFICADOR

    IDENTIFICADOR  shift, and go to state 55


State 20

   44 estructura_o_union: STRUCT .

    $default  reduce using rule 44 (estructura_o_union)


State 21

   45 estructura_o_union: UNION .

    $default  reduce using rule 45 (estructura_o_union)


State 22

   71 declarador_directo: IDENTIFICADOR .
   73                   | IDENTIFICADOR . '[' expresion_constante ']'
   74                   | IDENTIFICADOR . '[' ']'
   75                   | IDENTIFICADOR . '(' lista_tipos_de_parametro ')'
   76                   | IDENTIFICADOR . '(' lista_de_identificadores ')'
   77                   | IDENTIFICADOR . '(' ')'

    '('  shift, and go to state 56
    '['  shift, and go to state 57

    $default  reduce using rule 71 (declarador_directo)


State 23

   78 apuntador: '*' . lista_calificadores_de_tipo
   79          | '*' .
   80          | '*' . lista_calificadores_de_tipo apuntador
   81          | '*' . apuntador

    CONST     shift, and go to state 17
    VOLATILE  shift, and go to state 18
    '*'       shift, and go to state 23

    $default  reduce using rule 79 (apuntador)

    calificador_de_tipo          go to state 58
    apuntador                    go to state 59
    lista_calificadores_de_tipo  go to state 60


State 24

   72 declarador_directo: '(' . declarador ')'

    IDENTIFICADOR  shift, and go to state 22
    '*'            shift, and go to state 23
    '('            shift, and go to state 24

    declarador          go to state 61
    declarador_directo  go to state 40
    apuntador           go to state 41


State 25

   43 especificador_estructura_o_union: '{' . lista_declaraciones_struct '}'
   63 especificador_enum: '{' . lista_de_enumerador '}'

    VOID           shift, and go to state 8
    CHAR           shift, and go to state 9
    SHORT          shift, and go to state 10
    INT            shift, and go to state 11
    LONG           shift, and go to state 12
    FLOAT          shift, and go to state 13
    DOUBLE         shift, and go to state 14
    SIGNED         shift, and go to state 15
    UNSIGNED       shift, and go to state 16
    CONST          shift, and go to state 17
    VOLATILE       shift, and go to state 18
    ENUM           shift, and go to state 19
    STRUCT         shift, and go to state 20
    UNION          shift, and go to state 21
    IDENTIFICADOR  shift, and go to state 62
    '{'            shift, and go to state 25
    't'            shift, and go to state 26

    especificador_de_tipo             go to state 63
    calificador_de_tipo               go to state 64
    especificador_estructura_o_union  go to state 36
    estructura_o_union                go to state 37
    lista_declaraciones_struct        go to state 65
    declaracion_struct                go to state 66
    lista_calificador_especificador   go to state 67
    especificador_enum                go to state 38
    lista_de_enumerador               go to state 68
    enumerador                        go to state 69
    nombre_typedef                    go to state 42


State 26

  112 nombre_typedef: 't' .

    $default  reduce using rule 112 (nombre_typedef)


State 27

    0 $accept: unidad_de_programa . $end

    $end  shift, and go to state 70


State 28

    3 unidad_de_programa: unidad_de_traduccion .
    5 unidad_de_traduccion: unidad_de_traduccion . declaracion_externa

    AUTO           shift, and go to state 3
    REGISTER       shift, and go to state 4
    STATIC         shift, and go to state 5
    EXTERN         shift, and go to state 6
    TYPEDEF        shift, and go to state 7
    VOID           shift, and go to state 8
    CHAR           shift, and go to state 9
    SHORT          shift, and go to state 10
    INT            shift, and go to state 11
    LONG           shift, and go to state 12
    FLOAT          shift, and go to state 13
    DOUBLE         shift, and go to state 14
    SIGNED         shift, and go to state 15
    UNSIGNED       shift, and go to state 16
    CONST          shift, and go to state 17
    VOLATILE       shift, and go to state 18
    ENUM           shift, and go to state 19
    STRUCT         shift, and go to state 20
    UNION          shift, and go to state 21
    IDENTIFICADOR  shift, and go to state 22
    '*'            shift, and go to state 23
    '('            shift, and go to state 24
    '{'            shift, and go to state 25
    't'            shift, and go to state 26

    $default  reduce using rule 3 (unidad_de_programa)

    declaracion_externa                     go to state 71
    definicion_de_funcion                   go to state 30
    declaracion                             go to state 31
    especificadores_de_declaracion          go to state 32
    especificador_categoria_almacenamiento  go to state 33
    especificador_de_tipo                   go to state 34
    calificador_de_tipo                     go to state 35
    especificador_estructura_o_union        go to state 36
    estructura_o_union                      go to state 37
    especificador_enum                      go to state 38
    declarador                              go to state 39
    declarador_directo                      go to state 40
    apuntador                               go to state 41
    nombre_typedef                          go to state 42


State 29

    4 unidad_de_traduccion: declaracion_externa .

    $default  reduce using rule 4 (unidad_de_traduccion)


State 30

    6 declaracion_externa: definicion_de_funcion .

    $default  reduce using rule 6 (declaracion_externa)


State 31

    7 declaracion_externa: declaracion .

    $default  reduce using rule 7 (declaracion_externa)


State 32

    8 definicion_de_funcion: especificadores_de_declaracion . declarador lista_de_declaracion sentencia_compuesta
   10                      | especificadores_de_declaracion . declarador sentencia_compuesta
   12 declaracion: especificadores_de_declaracion . lista_declaradores_init ';'
   13            | especificadores_de_declaracion . ';'

    IDENTIFICADOR  shift, and go to state 22
    '*'            shift, and go to state 23
    '('            shift, and go to state 24
    ';'            shift, and go to state 72

    lista_declaradores_init  go to state 73
    declarador_init          go to state 74
    declarador               go to state 75
    declarador_directo       go to state 40
    apuntador                go to state 41


State 33

   16 especificadores_de_declaracion: especificador_categoria_almacenamiento . especificadores_de_declaracion
   17                               | especificador_categoria_almacenamiento .

    AUTO      shift, and go to state 3
    REGISTER  shift, and go to state 4
    STATIC    shift, and go to state 5
    EXTERN    shift, and go to state 6
    TYPEDEF   shift, and go to state 7
    VOID      shift, and go to state 8
    CHAR      shift, and go to state 9
    SHORT     shift, and go to state 10
    INT       shift, and go to state 11
    LONG      shift, and go to state 12
    FLOAT     shift, and go to state 13
    DOUBLE    shift, and go to state 14
    SIGNED    shift, and go to state 15
    UNSIGNED  shift, and go to state 16
    CONST     shift, and go to state 17
    VOLATILE  shift, and go to state 18
    ENUM      shift, and go to state 19
    STRUCT    shift, and go to state 20
    UNION     shift, and go to state 21
    '{'       shift, and go to state 25
    't'       shift, and go to state 26

    $default  reduce using rule 17 (especificadores_de_declaracion)

    especificadores_de_declaracion          go to state 76
    especificador_categoria_almacenamiento  go to state 33
    especificador_de_tipo                   go to state 34
    calificador_de_tipo                     go to state 35
    especificador_estructura_o_union        go to state 36
    estructura_o_union                      go to state 37
    especificador_enum                      go to state 38
    nombre_typedef                          go to state 42


State 34

   18 especificadores_de_declaracion: especificador_de_tipo . especificadores_de_declaracion
   19                               | especificador_de_tipo .

    AUTO      shift, and go to state 3
    REGISTER  shift, and go to state 4
    STATIC    shift, and go to state 5
    EXTERN    shift, and go to state 6
    TYPEDEF   shift, and go to state 7
    VOID      shift, and go to state 8
    CHAR      shift, and go to state 9
    SHORT     shift, and go to state 10
    INT       shift, and go to state 11
    LONG      shift, and go to state 12
    FLOAT     shift, and go to state 13
    DOUBLE    shift, and go to state 14
    SIGNED    shift, and go to state 15
    UNSIGNED  shift, and go to state 16
    CONST     shift, and go to state 17
    VOLATILE  shift, and go to state 18
    ENUM      shift, and go to state 19
    STRUCT    shift, and go to state 20
    UNION     shift, and go to state 21
    '{'       shift, and go to state 25
    't'       shift, and go to state 26
